# casita

./: .env.example  .envrc  .gitattributes  .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  pyproject.toml  search.json  zensical.toml
.claude/skills/casita-update/: SKILL.md
.github/workflows/: ci.yml  pages.yml
architecture/: index.html
data-model/: index.html
docs/: architecture.md  data-model.md  getting-started.md  index.md  scraping.md
docs/how-it-works/: deduplication.md  learning.md  photo-eval.md  ranking.md  routing.md  static-site.md
fixtures/: demo.sqlite
getting-started/: index.html
how-it-works/learning/: index.html
how-it-works/photo-eval/: index.html
how-it-works/ranking/: index.html
how-it-works/routing/: index.html
how-it-works/static-site/: index.html
scraping/: index.html
scripts/: validate_public.py
src/casita/: __init__.py  browser.py  cache.py  cloud_sync.py  craigslist.py  dedup.py  dogs.py  geo.py  html.py  listing_page.py  llm.py  locations.py  models.py  photos.py  rank.py  redfin.py  storage.py  walk.py  zillow.py  zumper.py
tests/: test_cloud_sync.py  test_demo.py  test_source_config.py  test_walk.py
